TimeTracerを追加して必要そうな箇所に追加した。 Logを必要そうな箇所に仕込んだ。

--- a/src/JenkinsNotification.Core/JenkinsNotification.Core.csproj
+++ b/src/JenkinsNotification.Core/JenkinsNotification.Core.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Utility\FileUtility.cs" />
     <Compile Include="Utility\PathUtility.cs" />
     <Compile Include="Utility\Products.cs" />
+    <Compile Include="Utility\TimeTracer.cs" />
     <Compile Include="Utility\ViewModelUtility.cs" />
     <Compile Include="Utility\ViewUtility.cs" />
     <Compile Include="ViewModels\Api\IJobExecuteResult.cs" />
