以下の内容を調整した。 ・ログ出力機能のViewModelを作成した。(仕掛中) ・コレクション用の拡張メソッドを追加した。 ・列挙体のユーティリティ機能を追加した。 ・bool値を反転するコンバーターを追加した。 ・幾つかユニットテストを追加した。

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /src/JenkinsNotificationTool
 /.vs
 /Debug/JenkinsNotification.Debug.LogViewer/obj/Debug
+/Debug/JenkinsNotification.Debug.LogViewer/bin/Debug
