--- a/Tests/JenkinsNotificationTool.Tests/JenkinsNotificationTool.Tests.csproj
+++ b/Tests/JenkinsNotificationTool.Tests/JenkinsNotificationTool.Tests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Core\Extensions\XmlDeserializerSerializerTests.cs" />
     <Compile Include="Core\Services\MockDialogService.cs" />
     <Compile Include="Core\Utility\EnumUtilityTests.cs" />
+    <Compile Include="Core\Utility\FileUtilityTests.cs" />
     <Compile Include="CustomControls\Converters\InvertBooleanConverterTests.cs" />
     <Compile Include="Extensions\ViewModelExtensions.cs" />
     <Compile Include="Core\ComponentModels\ViewModelTests.cs" />
