無視リストを更新した。

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 /Tests/JenkinsNotificationTool.Tests/obj/Debug
 /src/JenkinsNotification.CustomControls
 /src/JenkinsNotificationTool
-/.vs
+*.suo
 /Debug/JenkinsNotification.Debug.LogViewer/obj/Debug
 /Debug/JenkinsNotification.Debug.LogViewer/bin/Debug
 /.vs/JenkinsNotificationTool/v14/.suo
