--- a/src/JenkinsNotificationTool/JenkinsNotificationTool.csproj
+++ b/src/JenkinsNotificationTool/JenkinsNotificationTool.csproj
@@ -97,6 +97,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Enums.cs" />
     <Compile Include="ViewModels\ConfigurationViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\ConfigurationView.xaml.cs">
