--- a/src/JenkinsNotification.Core/packages.config
+++ b/src/JenkinsNotification.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="5.2.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Prism" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net461" />
