--- a/src/JenkinsNotification.CustomControls/packages.config
+++ b/src/JenkinsNotification.CustomControls/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="Dragablz" version="0.0.3.181" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net451" />
+  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.2.1.750" targetFramework="net461" />
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net461" />
 </packages>
