--- a/src/JenkinsNotificationTool/packages.config
+++ b/src/JenkinsNotificationTool/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="Dragablz" version="0.0.3.181" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.2.1.750" targetFramework="net461" />
   <package id="Prism" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net461" />
