--- a/Tests/JenkinsNotificationTool.Tests/JenkinsNotificationTool.Tests.csproj
+++ b/Tests/JenkinsNotificationTool.Tests/JenkinsNotificationTool.Tests.csproj
@@ -90,6 +90,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Core\Extensions\CollectionExtensionsTests.cs" />
+    <Compile Include="Core\Extensions\DateTimeExtensionsTests.cs" />
     <Compile Include="Core\Extensions\ExceptionExtensionsTest.cs" />
     <Compile Include="Core\Extensions\StringExtensionsTests.cs" />
     <Compile Include="Core\Extensions\XmlDeserializerSerializerTests.cs" />
