--- a/Tools/Server.Simulator/Server.Simulator.csproj
+++ b/Tools/Server.Simulator/Server.Simulator.csproj
@@ -59,6 +59,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,6 +69,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="WebSocket4Net, Version=0.14.1.0, Culture=neutral, PublicKeyToken=eb4e154b696bf72a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\WebSocket4Net.0.14.1\lib\net45\WebSocket4Net.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -82,6 +87,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Communicators\WebSocketClientEventArgs.cs" />
+    <Compile Include="Communicators\WebSocketReceivedRequestEventArgs.cs" />
+    <Compile Include="Communicators\WebSocketServer.cs" />
     <Compile Include="ViewModels\ManageViewModel.cs" />
     <Compile Include="Views\ManageView.xaml.cs">
       <DependentUpon>ManageView.xaml</DependentUpon>
