--- a/Tools/Server.Simulator/packages.config
+++ b/Tools/Server.Simulator/packages.config
@@ -3,4 +3,5 @@
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.2.1.750" targetFramework="net461" />
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net461" />
+  <package id="WebSocket4Net" version="0.14.1" targetFramework="net461" />
 </packages>
