--- a/src/JenkinsNotification.CustomControls/JenkinsNotification.CustomControls.csproj
+++ b/src/JenkinsNotification.CustomControls/JenkinsNotification.CustomControls.csproj
@@ -94,6 +94,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\EnumDataProvider.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
