--- a/Tests/JenkinsNotificationTool.Tests/JenkinsNotificationTool.Tests.csproj
+++ b/Tests/JenkinsNotificationTool.Tests/JenkinsNotificationTool.Tests.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Core\Extensions\DateTimeExtensionsTests.cs" />
     <Compile Include="Core\Extensions\ExceptionExtensionsTest.cs" />
     <Compile Include="Core\Extensions\StringExtensionsTests.cs" />
+    <Compile Include="Core\Extensions\TaskExtensionsTests.cs" />
     <Compile Include="Core\Extensions\XmlDeserializerSerializerTests.cs" />
     <Compile Include="Core\ProfileTests.cs" />
     <Compile Include="Core\Services\MockDialogService.cs" />
