--- a/src/JenkinsNotification.Core/packages.config
+++ b/src/JenkinsNotification.Core/packages.config
@@ -7,4 +7,5 @@
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net461" />
   <package id="Prism.PubSubEvents" version="1.1.2" targetFramework="net461" />
+  <package id="WebSocket4Net" version="0.14.1" targetFramework="net461" />
 </packages>
