--- a/src/JenkinsNotification.CustomControls/JenkinsNotification.CustomControls.csproj
+++ b/src/JenkinsNotification.CustomControls/JenkinsNotification.CustomControls.csproj
@@ -113,6 +113,7 @@
     <Compile Include="MessageDialog.xaml.cs">
       <DependentUpon>MessageDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MessageIcon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
