構成ファイルが存在しない場合に構成設定画面を表示するよう修正した。

--- a/src/JenkinsNotification.Core/JenkinsNotification.Core.csproj
+++ b/src/JenkinsNotification.Core/JenkinsNotification.Core.csproj
@@ -105,6 +105,7 @@
       <DependentUpon>ApplicationConfiguration.cs</DependentUpon>
     </Compile>
     <Compile Include="Configurations\ApplicationConfiguration.cs" />
+    <Compile Include="Configurations\ConfigurationLoadException.cs" />
     <Compile Include="Configurations\DisplayConfiguration.cs" />
     <Compile Include="Configurations\NotifyConfiguration.cs" />
     <Compile Include="Configurations\Verify\ApplicationConfigurationVerify.cs" />
