開始、終了アニメーションを追加した。

--- a/src/JenkinsNotification.CustomControls/JenkinsNotification.CustomControls.csproj
+++ b/src/JenkinsNotification.CustomControls/JenkinsNotification.CustomControls.csproj
@@ -129,6 +129,7 @@
     </Compile>
     <Compile Include="Services\BalloonTipService.cs" />
     <Compile Include="Services\DialogService.cs" />
+    <Compile Include="Utility\StoryboardUtility.cs" />
     <Compile Include="View.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
