--- a/src/JenkinsNotification.Core/JenkinsNotification.Core.csproj
+++ b/src/JenkinsNotification.Core/JenkinsNotification.Core.csproj
@@ -115,8 +115,10 @@
     <Compile Include="Configurations\Verify\NotifyConfigurationVerify.cs" />
     <Compile Include="Configurations\Verify\VerifyResult.cs" />
     <Compile Include="DataManager.cs" />
+    <Compile Include="DataStore.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Executers\IExecuter.cs" />
+    <Compile Include="Executers\JobResultExecuter.cs" />
     <Compile Include="Extensions\AutoMapperExtensions.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
@@ -128,6 +130,7 @@
     <Compile Include="Extensions\XmlDeserializer.cs" />
     <Compile Include="Extensions\XmlSerializer.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IDataStore.cs" />
     <Compile Include="Jenkins\Api\JobExecuteResult.cs" />
     <Compile Include="Logs\LogManager.cs" />
     <Compile Include="Profile.cs" />
