受信履歴一覧画面を追加した。

--- a/src/JenkinsNotification.Core/JenkinsNotification.Core.csproj
+++ b/src/JenkinsNotification.Core/JenkinsNotification.Core.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Configurations\Verify\IConfigurationVerify.cs" />
     <Compile Include="Configurations\Verify\NotifyConfigurationVerify.cs" />
     <Compile Include="Configurations\Verify\VerifyResult.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="DataManager.cs" />
     <Compile Include="DataStore.cs" />
     <Compile Include="Enums.cs" />
