--- a/src/JenkinsNotification.Core/packages.config
+++ b/src/JenkinsNotification.Core/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="AutoMapper" version="5.2.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="NLog" version="4.4.1" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.1" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.1" targetFramework="net461" />
   <package id="Prism" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net461" />
