--- a/src/JenkinsNotification.Core/NLog.config
+++ b/src/JenkinsNotification.Core/NLog.config
@@ -27,8 +27,21 @@
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
     -->
-    <target xsi:type="File" encoding="utf-8" name="f" fileName="logfile.log" layout="[${longdate}]|${uppercase:${level}}|${message}" />
-    <target xsi:type="Console" name="lc" layout="$>{longdate} [${uppercase:${level}}] ${message}" />
+    <!--
+        ファイル形式で出力する。
+        出力先はLocalApplicationData 配下とし、ファイル名は短い日付形式で出力する。
+        ７日より以前のファイルは削除する。
+    -->
+    <target xsi:type="File"
+            encoding="utf-8"
+            maxArchiveFiles="7"
+            archiveEvery="Day"
+            name="f"
+            fileName="${specialfolder:folder=LocalApplicationData}/Microcircus/JenkinsNotificationTool/${shortdate}.log"
+            layout="[${longdate}]|${uppercase:${level}}|${message}" />
+    <target xsi:type="Console"
+            name="lc"
+            layout="$>{longdate} [${uppercase:${level}}] ${message}" />
   </targets>
 
   <rules>
