--- a/src/JenkinsNotificationTool/JenkinsNotificationTool.csproj
+++ b/src/JenkinsNotificationTool/JenkinsNotificationTool.csproj
@@ -143,6 +143,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="DataStore.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Utility\BalloonDisplayTimeKindConverter.cs" />
     <Compile Include="Utility\NotifyHistoryCountKindConverter.cs" />
