--- a/src/JenkinsNotification.Core/packages.config
+++ b/src/JenkinsNotification.Core/packages.config
@@ -7,8 +7,10 @@
   <package id="NLog.Schema" version="4.4.1" targetFramework="net461" />
   <package id="Prism" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net461" />
+  <package id="Prism.Core" version="6.2.0" targetFramework="net461" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net461" />
   <package id="Prism.Mvvm" version="1.1.1" targetFramework="net461" />
   <package id="Prism.PubSubEvents" version="1.1.2" targetFramework="net461" />
+  <package id="Prism.Wpf" version="6.2.0" targetFramework="net461" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net461" />
 </packages>
