--- a/Tools/Server.Simulator/packages.config
+++ b/Tools/Server.Simulator/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.2.1.750" targetFramework="net461" />
+  <package id="Prism.Core" version="6.2.0" targetFramework="net461" />
   <package id="Prism.Mvvm" version="1.1.1" targetFramework="net461" />
+  <package id="Prism.Unity" version="6.2.0" targetFramework="net461" />
+  <package id="Prism.Wpf" version="6.2.0" targetFramework="net461" />
+  <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net461" />
 </packages>
