アプリケーションサービスを追加した。 バルーン通知機能を調整した。（タスクトレイをMainViewのものを使用するように。）

--- a/Debug/JenkinsNotification.Debug.LogViewer/JenkinsNotification.Debug.LogViewer.csproj
+++ b/Debug/JenkinsNotification.Debug.LogViewer/JenkinsNotification.Debug.LogViewer.csproj
@@ -71,6 +71,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Services\ApplicationService.cs" />
     <Compile Include="ViewModels\LogViewModel.cs" />
     <Compile Include="Views\LogView.xaml.cs">
       <DependentUpon>LogView.xaml</DependentUpon>
